log
Thu Mar 26 06:58:24 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
2c637f3
Thu Mar 26 07:20:10 PM UTC 2026: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:97:24: error: expected ‘;’ before ‘return’
   97 |     free(list->current)
      |                        ^
      |                        ;
   98 | 
   99 |     return dato;
      |     ~~~~~~              
list.c:96:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   96 |     void* dato = list->current->data;
      |           ^~~~
cc1: all warnings being treated as errors
24741ba
Thu Mar 26 07:20:34 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e11521
Thu Mar 26 07:22:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:96:10: error: variable or field ‘dato’ declared void
   96 |     void dato = list->current->data;
      |          ^~~~
list.c:96:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   96 |     void dato = list->current->data;
      |                 ^~~~
list.c:99:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Wint-conversion]
   99 |     return dato;
      |            ^~~~
9805ed7
Thu Mar 26 07:29:09 PM UTC 2026: 
 list.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   93 |     void* dato = list->current->data;}
      |           ^~~~
list.c: At top level:
list.c:95:5: error: expected identifier or ‘(’ before ‘if’
   95 |     if(list->current->prev == NULL)
      |     ^~
list.c:102:5: error: expected identifier or ‘(’ before ‘if’
  102 |     if(list->current->next == NULL)
      |     ^~
list.c:109:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
  109 |     list->current->prev->next = list->current->next; //El current debe quedar apuntando al nodo siguiente del eliminado.
      |         ^~
list.c:110:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
  110 |     list->current->next->prev = list->current->prev;
      |         ^~
list.c:112:14: error: expected ‘)’ before ‘->’ token
  112 |     free(list->current);
      |              ^~
      |              )
list.c:114:5: error: expected identifier or ‘(’ before ‘return’
  114 |     return dato;
      |     ^~~~~~
list.c:117:1: error: expected identifier or ‘(’ before ‘}’ token
  117 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:93:38: error: control reaches end of non-void function [-Werror=return-type]
   93 |     void* dato = list->current->data;}
      |                                      ^
cc1: all warnings being treated as errors
52375f3
Thu Mar 26 07:29:44 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2ad3f6b
Thu Mar 26 07:35:38 PM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
c13990c
Thu Mar 26 07:49:03 PM UTC 2026: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
32ffb97
Thu Mar 26 07:52:34 PM UTC 2026: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|0
fe09dec
Thu Mar 26 07:54:18 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
e555968
Thu Mar 26 07:54:32 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
8325d0a
Sat Mar 28 05:34:09 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
f074a80
Sat Mar 28 05:36:11 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 25/60
cd03b9c
Sat Mar 28 05:37:47 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
ad23a1b
Sat Mar 28 05:40:42 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
f3f2c07
Sat Mar 28 05:44:05 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
22f81d1
Sat Mar 28 05:44:31 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c96c8ee
Sat Mar 28 05:45:32 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
d92c9bd
Sat Mar 28 05:46:00 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
87cf18b
Sat Mar 28 05:46:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7bccc5b
Sat Mar 28 05:46:25 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
f294d85
Sat Mar 28 05:47:14 PM UTC 2026: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 30/60
b610410
